Parte de ctrl tests y algun fixeo en historial